[package]
name = "quotabar"
version = "0.1.0"
description = "Menu-bar quota tracker for Claude / Codex CLI / Kimi"
authors = ["Hanson"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "quotabar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
