[package]
name = "quotabar"
version = "0.1.0"
description = "Menu-bar quota tracker for Claude / Codex CLI / Kimi"
authors = ["Hanson"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "quotabar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
# HTTP client with TLS fingerprint impersonation (Safari/Chrome) to pass Cloudflare.
# wreq is the renamed/current crate (formerly rquest, same maintainer 0x676e67).
wreq = { version = "5", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
wreq-util = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
